# Projeto-CG

fase1/: generator  generator.cpp
fase1/3d/: pane.3d  plane_2_3.3d  sphere.3d  sphere_1_10_10.3d
fase1/engine/: engine  main.cpp
fase1/tests/test_files_phase_1/: test_1_5.xml
fase2/: Makefile  generator  generator.cpp
fase2/3d/: box_2_3.3d  cone_1_2_4_3.3d  jupiter.3d  saturn_ringA.3d
fase2/engine/: main.cpp
fase2/xml/: solar_system.xml
fase3/: generator  generator.cpp
fase3/3d/: mars.3d  mercury.3d  moon.3d  sun.3d  uranus_ring.3d  venus.3d
fase3/engine/: CMakeLists.txt  main.cpp
fase3/tests/test_files_phase_3/: solar_system.xml
fase4/: generator.cpp
fase4/3d/: bezier_10.3d  earth.3d  neptune.3d  saturn.3d  saturn_ringB.3d  saturn_ringC.3d  sphere_1_8_8.3d  torus.3d  uranus.3d
fase4/engine/: CMakeLists.txt  main.cpp
